# openrpc

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
demo/: client.py  demo.py  demo_server.py  server.py
docs/: .gitignore  docusaurus.config.js  package-lock.json  package.json
docs/docs/: authentication.md  basics.md  contributing.md  discover_and_docs.md  errors.md  generating_clients.md  interactive_docs.md  interactive_documentation.md  intro.md  method_routers.md  rpc_discover_and_docs.md  rpc_to_cli.md  undefined_values.md
docs/docs/authorization/: _category_.json  dependent_arguments.md
docs/docs/examples/: _category_.json  aiohttp.md  fastapi.md  flask.md  paho.md  sanic.md
docs/docs/security/: authentication.md  authorization.md  depends_arguments.md  index.md  security_schemes.md
jsonrpc2/: exceptions.py  json_types.py  rpc_client.py  rpc_objects.py  rpc_server.py  util.py
openrpc/: __init__.py  _common.py  _depends.py  _discover.py  _method_processor.py  _method_registrar.py  _objects.py  _openrpc.py  _request_processor.py  _router.py  _rpc_server.py  _rpcmethod.py  _server.py  _util.py  exceptions.py  objects.py  open_rpc_objects.py  openrpc_server.py  rpc_client.py  rpc_objects.py  rpc_server.py  server.py  util.py
openrpc/_discover/: _common.py  _methods.py  _schemas.py  discover.py
src/: rpc_objects.py  rpc_server.py
src/openrpc/: _rpc_server.py  objects.py  open_rpc_objects.py  rpc_client.py  server.py
test/: json_rpc_tests.py  open_rpc_tests.py  test_client.py  tests.py
tests/: __init__.py  test_aliases.py  test_async.py  test_custom_server_error.py  test_decorators.py  test_depends.py  test_discover.py  test_edges.py  test_enums.py  test_errors.py  test_future.py  test_openrpc.py  test_openrpc_async.py  test_optional_enums.py  test_param_rules.py  test_remove.py  test_routers.py  test_rpc_server.py  test_security.py  test_undefined.py  test_unions.py  util.py
