[tool.poetry]
name = "openrpc"
version = "7.0.1"
description = "OpenRPC provides classes to rapidly develop an OpenRPC server."
readme = "README.md"
repository = "https://gitlab.com/mburkard/openrpc"
homepage = "https://gitlab.com/mburkard/openrpc"
license = "MIT"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.3"
jsonrpc2-objects = "^3.0.0"

[tool.poetry.dev-dependencies]
coverage = "^7.1.0"
mypy = "^1.0.0"
black = "^23.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.21.0"
ruff = "^0.0.280"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "ERA",
    "F",
    "FBT",
    "FA",
    "FLY",
    "FIX",
    "ICN",
    "INT",
    "ISC",
    "N",
    "PL",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "S",
    "SIM",
    "T10",
    "TD",
    "TRY",
]
ignore = ["D203", "D213"]
