[tool.poetry]
name = "openrpc"
version = "10.3.1"
description = "Transport agnostic framework for developing OpenRPC servers."
readme = "README.md"
repository = "https://gitlab.com/mburkard/openrpc"
homepage = "https://python-openrpc.burkard.cloud"
license = "MIT"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
jsonrpc2-objects = "^4.1.0"
lorem-pysum = "^1.4.3"
py-undefined = "^0.1.7"

[tool.poetry.dev-dependencies]
coverage = "^7.4.0"
mypy = "^1.8.0"
black = "^24.1.1"
pytest = "^8.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest-asyncio = "^0.23.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["livecov"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
lint.select = [
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "ERA",
    "F",
    "FBT",
    "FA",
    "FLY",
    "FIX",
    "ICN",
    "INT",
    "ISC",
    "N",
    "PL",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "S",
    "SIM",
    "T10",
    "TD",
    "TRY",
]
lint.ignore = ["D203", "D213", "FA102", "FA100", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
