[metadata]
name = openrpc
version = 3.0.12
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = Python implementation of the OpenRPC specification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/openrpc
classifiers = Programming Language :: Python :: 3

packages = [openrpc]

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
