[metadata]
name = openrpc
version = 1.0.8
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = OpenRPC provides classes to rapidly develop an OpenRPC server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/openrpc
classifiers = Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
install_requires =
	pydantic~=1.8.2
	jsonrpc2-objects~=1.3.0

[options.packages.find]
where = src
